CSS editor fixes for Cart and Checkout blocks (https://github.com/woocommerce/woocommerce-blocks/pull/1949)
* Set min-height to 0 for Country & State hidden inputs

* Fix button styles broken in the Cart block in editor

* Avoid having editor.scss specific stylesheets for button and totals

* Move Button inside cart-checkout subfolder

--- a/plugins/woocommerce-blocks/assets/js/base/components/totals/totals-coupon-code-input/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/totals/totals-coupon-code-input/style.scss
@@ -1,17 +1,18 @@
 .wc-block-coupon-code__form {
 	display: flex;
 	margin-bottom: 0;
-}
 
-.wc-block-coupon-code__input {
-	margin-top: 0;
-	flex-grow: 1;
-}
+	.wc-block-coupon-code__input {
+		margin-top: 0;
+		flex-grow: 1;
+	}
 
-.wc-block-coupon-code__button {
-	height: 48px;
-	margin-left: $gap;
-	padding-left: $gap-large;
-	padding-right: $gap-large;
-	white-space: nowrap;
+	.wc-block-coupon-code__button {
+		height: 48px;
+		flex-shrink: 0;
+		margin-left: $gap;
+		padding-left: $gap-large;
+		padding-right: $gap-large;
+		white-space: nowrap;
+	}
 }
